[package]
name = "streamline"
version = "0.0.5"
authors = ["Alex Pearson <alex@alexpear.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/NAlexPear/streamline"
description = "Reversible futures::Stream-based state machines"
keywords = ["futures", "streams", "state-machines"]

[badges]
github = { repository = "NAlexPear/streamline" } 
maintenance = { status = "actively-developed" }

[lib]
doctest = false
test = false

[dependencies]
async-trait = "0.1.27"
futures = "0.3.4"

[dev-dependencies.tokio]
default-features = false
version = "0.2.13"
